project2/test/test_2_1.out
Error type 1 at Line 16: undefined variable: test
Error type 1 at Line 16: undefined variable: test2
